--- a/package.json
+++ b/package.json
@@ -76,11 +76,15 @@
     "styled-components": "6.1.12",
     "typescript": "5.5.4"
   },
+  "browserslist": "extends @sanity/browserslist-config",
   "peerDependencies": {
     "react": "^18",
     "sanity": "^3"
   },
   "engines": {
     "node": ">=18"
+  },
+  "overrides": {
+    "conventional-changelog-conventionalcommits": ">= 8.0.0"
   }
 }
